# rka

./: README.md  hello.py
mapa/: CMakeLists.txt  angle.xcf
mapa/scripts/: mappingTODO.py
mapa/src/: args.h  mapping.cc
mapa/world/: simple.world
media/: angle.xcf  robot.xcf
oekidin/scripts/: laserInfo.py  oztopoakEkiditen.py
oekidin/src/: laserInfo.cpp  oztopoakEkiditen.cpp
oekidin/world/: simple.world
oekidin/world/bitmaps/: cave.xcf
paretari-jarraitu-kp/: CMakeLists.txt
paretari-jarraitu-kp/scripts/: paretariJarraituTODO.py
paretari-jarraitu-kp/src/: paretariJarraitu.cpp
paretari-jarraitu-kp/world/: simple.world
paretari-jarraitu-ktm/: CMakeLists.txt
paretari-jarraitu-ktm/scripts/: paretariJarraituKTM-TODO.py
paretari-jarraitu-ktm/src/: paretariJarraituKTM.cpp
paretari-jarraitu-ktm/world/: map.inc  simple.world
probak/: giroskopio.py  kolore.py  lauki-odom.py  lauki-tank.py  talka.py
txapelketa/: txapelketa copy.py  txapelketa-012.py  txapelketa-120.py  txapelketa-201.py  txapelketa-final.py  txapelketa.py
workspace/: lauki-rob.py  lauki-tank.py  lauki.py  lerro-beltz.py  lsa-prueba.py  ultrasoinu.py
